--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="section-1">
-  <h1>Hello, My name is Nate</h1>
+  <h1>Hello, My name is Nate.</h1>
   <p> I'm a newly graduated developer ready to work on any project. </p>
 </div>
 <div class="section-2"></div>
