--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html>
 <head>
 <title>Nate Glazier</title>
+<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="master.css" media="screen" />
 <script src="http://localhost:8080/skewer"></script>
 </head>
 
 <body>
 <div class="section-1">
-  <h1>Hello, My name is Nate.</h1>
-  <p> I'm a newly graduated developer ready to work on any project. </p>
+  <div id="header">
+    <h1>Hello, My name is Nate.</h1>
+    <p> I'm a newly graduated developer ready to work on any project. </p>
+  </div>
 </div>
-<div class="section-2"></div>
+<div class="section-2">
+  <p> If you're looking for a small freelance project, I can take those on. </p>
+  <p> If you want someone to join your company, I'm up for that life, too. </p>
+</div>
+<div class="section-5">
+  <h1> About Nate Glazier </h1>
+
+</div>
+
 <div class="section-3">
   <h1>Contact Me</h1>
   <p>Contact filler</p>
