--- a/index.html
+++ b/index.html
@@ -8,18 +8,52 @@
 </head>
 
 <body>
+
+<section class="hero has-text-centered">
+
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="column">
+          <h1 class="title">Hi, I'm Nate.</h1>
+          <h2 class="subtitle">I program, I create, I do what I love.</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<section class="about">
+  <div class="container">
+    <div class="columns is-centred">
+      <div class="column">
+        <h2 class="title">About Me</h2>
+        <p>Recently graduated from university, I'm looking to find work. I'm happy to do remote work for agencies or to find gainful employment. I like programming. I also like music production.
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!--
+
 <div class="section-1">
-  <div id="header">
-    <h1>Hello, My name is Nate.</h1>
-    <p> I'm a newly graduated developer ready to work on any project. </p>
+  <div id="header" class-"flex">
+    <div class="text">
+      <h1>Hello, My name is Nate.</h1>
+      <p> I'm a newly graduated developer ready to work on any project. </p>
+    </div>
+    <div class="button page-link"> Learn More </div>
   </div>
 </div>
 <div class="section-2">
-  <p> If you're looking for a small freelance project, I can take those on. </p>
-  <p> If you want someone to join your company, I'm up for that life, too. </p>
+  <h1 class="header"> Who am I? </h1>
+  <p class="text-left"> If you're looking for a small freelance project, I can take those on. </p>
+  <p class="text-right"> If you want someone to join your company, I'm up for that life, too. </p>
 </div>
 <div class="section-5">
-  <h1> About Nate Glazier </h1>
+  <h1 class="header"> About Nate Glazier </h1>
 
 </div>
 
@@ -30,6 +64,8 @@
 <div class="section-4">
   <p>&#169; Nate Glazier 2018
 </div>
+
+-->
 </body>
 
 </html>
