rewording about page.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="columns is-centred">
       <div class="column">
         <h2 class="title">About Me</h2>
-        <p>Recently graduated from university, I'm looking to find work. I'm happy to do remote work for agencies or to find gainful employment. I like programming. I also like music production.
+        <p>Recently graduated from university, I'm happy to take on freelance work, remote work, and to become employed. Most of the work I can do is programming related, but in my free time I like to use my computer for music.
       </div>
     </div>
   </div>
