reintroduced copyright notice, added paragraph endings.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="columns is-centred">
       <div class="column">
         <h2 class="title">About Me</h2>
-        <p>Recently graduated from university, I'm happy to take on freelance work, remote work, and to become employed. Most of the work I can do is programming related, but in my free time I like to use my computer for music.
+        <p>Recently graduated from university, I'm happy to take on freelance work, remote work, and to become employed. Most of the work I can do is programming related, but in my free time I like to use my computer for music.</p>
       </div>
     </div>
   </div>
@@ -60,11 +60,11 @@
   <h1>Contact Me</h1>
   <p>Contact filler</p>
 </div>
+-->
 <div class="section-4">
-  <p>&#169; Nate Glazier 2018
+  <p>&#169; Nate Glazier 2018</p>
 </div>
 
--->
 </body>
 
 </html>
