--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="column">
           <h1 class="title">Hi, I'm Nate.</h1>
           <h2 class="subtitle">I program, I create, I do what I love.</h2>
+          
         </div>
       </div>
     </div>
@@ -23,7 +24,11 @@
 
 </section>
 
-<section class="about">
+<div class="section-4">
+  <p>&#169; Nate Glazier 2018</p>
+</div>
+
+<section class="about hidden">
   <div class="container">
     <div class="columns is-centred">
       <div class="column">
@@ -61,9 +66,7 @@
   <p>Contact filler</p>
 </div>
 -->
-<div class="section-4">
-  <p>&#169; Nate Glazier 2018</p>
-</div>
+
 
 </body>
 
