adding nav menu in a basic form. will not be visible without the icons.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
 
 </section>
 
+<nav>
+  <ul>
+    <li>
+      <a href ".hero" data-number="1">
+        <span class="cd-dot"></span>
+        <span class="cd-label">Home</span>
+      </a>
+    </li>
+    <li>
+      <a href ".about" data-number="2">
+        <span class="cd-dot"></span>
+        <span class="cd-label">About</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
 <div class="section-4">
   <p>&#169; Nate Glazier 2018</p>
 </div>
@@ -39,6 +56,7 @@
   </div>
 
 </section>
+
 
 <!--
 
