--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 <nav>
   <ul>
     <li>
-      <a class="active" href=".hero" data-number="1">
+      <a class="active" href="" data-number="1">
         <span class="cd-dot"></span>
         <span class="cd-label">Home</span>
       </a>
     </li>
     <li>
-      <a href=".about" data-number="2">
+      <a href="" data-number="2">
         <span class="cd-dot"></span>
         <span class="cd-label">About</span>
       </a>
     </li>
     <li>
-      <a href=".contact" data-number="3">
+      <a href="" data-number="3">
         <span class="cd-dot"></span>
         <span class="cd-label">Contact Me</span>
       </a>
