cleanup, some CSS alterations. dot nav temporarily removed until changes sorted.

--- a/index.html
+++ b/index.html
@@ -7,91 +7,35 @@
 </head>
 
 <body>
-
-<section class="hero has-text-centered">
-
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns is-centered">
-        <div class="column">
-          <h1 class="title">Hi, I'm Nate.</h1>
-          <h2 class="subtitle">I program, I create, I do what I love.</h2>
-          
-        </div>
-      </div>
-    </div>
-  </div>
-
-</section>
-
+<div class="container">
 <nav>
   <ul>
-    <li>
-      <a class="active" href="" data-number="1">
-        <span class="cd-dot"></span>
-        <span class="cd-label">Home</span>
-      </a>
-    </li>
-    <li>
-      <a href="" data-number="2">
-        <span class="cd-dot"></span>
-        <span class="cd-label">About</span>
-      </a>
-    </li>
-    <li>
-      <a href="" data-number="3">
-        <span class="cd-dot"></span>
-        <span class="cd-label">Contact Me</span>
-      </a>
-    </li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
   </ul>
 </nav>
 
-<div class="section-4">
-  <p>&#169; Nate Glazier 2018</p>
-</div>
+<section>
+    <h1>Hi, I'm Nate.</h1>
+    <h2>I program, I create, I do what I love.</h2>
+  </section>
 
-<section class="about hidden">
-  <div class="container">
-    <div class="columns is-centred">
-      <div class="column">
-        <h2 class="title">About Me</h2>
-        <p>Recently graduated from university, I'm happy to take on freelance work, remote work, and to become employed. Most of the work I can do is programming related, but in my free time I like to use my computer for music.</p>
-      </div>
-    </div>
-  </div>
+<section>
 
+  <h1>About Me</h1>
+  <p>I'm a recent graduate of Computer Science at the University of Sussex.</p>
+  <p>The three things at the top of my enjoyment list would be programming, anything to do with music, and gaming.</p>
+  <p>I'm happy to work on many things, either remotely, on a freelance basis, or in full time employment.</p>
 </section>
 
+<section>
+  <h1>Contact me</h1>
+  <p>I can be reached through the email adress n.glazier@hotmail.co.uk. </p> 
+</section>
 
-<!--
-
-<div class="section-1">
-  <div id="header" class-"flex">
-    <div class="text">
-      <h1>Hello, My name is Nate.</h1>
-      <p> I'm a newly graduated developer ready to work on any project. </p>
-    </div>
-    <div class="button page-link"> Learn More </div>
-  </div>
+&#169; Nathan Glazier 2018
 </div>
-<div class="section-2">
-  <h1 class="header"> Who am I? </h1>
-  <p class="text-left"> If you're looking for a small freelance project, I can take those on. </p>
-  <p class="text-right"> If you want someone to join your company, I'm up for that life, too. </p>
-</div>
-<div class="section-5">
-  <h1 class="header"> About Nate Glazier </h1>
-
-</div>
-
-<div class="section-3">
-  <h1>Contact Me</h1>
-  <p>Contact filler</p>
-</div>
--->
-
-
 </body>
 
 </html>
