working links, yay

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <div class="container">
 <nav>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
-<section>
+<section id="home">
     <h1>Hi, I'm Nate.</h1>
     <h2>I program, I create, I do what I love.</h2>
-  </section>
+</section>
 
-<section>
+<section id="about">
 
   <h1>About Me</h1>
   <p>I'm a recent graduate of Computer Science at the University of Sussex.</p>
@@ -29,12 +29,12 @@
   <p>I'm happy to work on many things, either remotely, on a freelance basis, or in full time employment.</p>
 </section>
 
-<section>
+<section id="contact">
   <h1>Contact me</h1>
   <p>I can be reached through the email adress n.glazier@hotmail.co.uk. </p> 
 </section>
 
-&#169; Nathan Glazier 2018
+<div id="copyright">&#169; Nathan Glazier 2018</div>
 </div>
 </body>
 
