--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
 <body>
 <div class="container">
-<nav>
+
+  <nav>
   <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#home" title="Home">Home</a></li>
+    <li><a href="#about" title="About Me">About</a></li>
+    <li><a href="#contact" title="Contact Me">Contact</a></li>
   </ul>
 </nav>
 
@@ -36,6 +37,9 @@
 
 <div id="copyright">&#169; Nathan Glazier 2018</div>
 </div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
 
 </html>
